fix spacing of top navigation buttons when bps enabled
closes ADV-123
flag=top_navigation_placement

Test plan:
- Specs Pass
- PreReqs:
  - top_navigation_placement enabled with a configured tool
  - Immersive Reader enabled (adds a button to toolbar)
  - A bps master course
- Ensure the top navigation lti tool button is not covered by the bps
  button.
- Ensure the buttons stay evenly spaced and Student View margins do not
  change.
- Test at different page widths.
- Test on full-width pages (gradebook).
- Pin the top_navigation tool.
 - Ensure the pinned tool shows up as an icon without text.
 - Ensure the tool title is displayed when hovering over the button.

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/348851
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Alexis Nast <alexis.nast@instructure.com>
QA-Review: Jonathan Featherstone <jfeatherstone@instructure.com>

--- a/app/stylesheets/base/_ic_app_layout.scss
+++ b/app/stylesheets/base/_ic_app_layout.scss
@@ -353,6 +353,18 @@ body:not(.course-menu-expanded) {
   }
 }
 
+/* Push Top Navigation buttons out from under blueprint sync button on full-width pages */
+body.full-width .right-of-crumbs.bp-sync-button-exists {
+  margin-right: 3rem;
+}
+
+/* Top Navigation buttons still need margin at smaller sizes on pages that are not full-width */
+@media (max-width: 1495px) {
+  .right-of-crumbs.bp-sync-button-exists {
+    margin-right: 3rem;
+  }
+}
+
 .ic-app-course-nav-toggle {
   margin-#{direction(right)}: $ic-sp;
   padding: 0;
